// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoalTrackerWidget /> when completed (or exceeded) should otherwise match the expected snapshot 1`] = `
<div>
  <div
    class="goal"
  >
    <div
      class="summary"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6"
      >
        My goal
      </h2>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
        role="progressbar"
        style="height: 8px;"
      >
        <div
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
          style="transform: translateX(0%);"
        />
      </div>
      <small
        class="MuiTypography-root MuiTypography-body1"
      >
        42 wombats sur 42
      </small>
    </div>
    <div
      class="cta"
    >
      <button
        class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiFab-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            data-testid="completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<GoalTrackerWidget /> when not completed should otherwise match the expected snapshot 1`] = `
<div>
  <div
    class="goal"
  >
    <div
      class="summary"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6"
      >
        My goal
      </h2>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
        role="progressbar"
        style="height: 8px;"
      >
        <div
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
          style="transform: translateX(-50%);"
        />
      </div>
      <small
        class="MuiTypography-root MuiTypography-body1"
      >
        21 wombats sur 42
      </small>
    </div>
    <div
      class="cta"
    >
      <button
        class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiFab-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            data-testid="in-progress"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
